syntax = "proto3";

package auth;

option go_package = "github.com/jsndz/kairo-proto/auth;authpb";

service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse){};
  rpc SignIn(SignInRequest) returns (SignInResponse){};
  rpc Validate(ValidateRequest) returns (ValidateResponse){};
  rpc CreateWSToken(CreateWSTokenRequest) returns (CreateWSTokenResponse){};
}
message SignUpRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message SignUpResponse {
  string token = 1;
  User user = 2;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  string token = 1;
  User user = 2;
}

message User {
  uint32 id = 1;
  string name = 2;
  string email = 3;
}


message ValidateRequest {
  string token=1;
}

message ValidateResponse {
  bool valid=1;
  string user_id = 2;
}


message CreateWSTokenRequest {
  uint32 user_id=1;
  uint32 doc_id=2;
}

message CreateWSTokenResponse {
  string token=1;
}